tests/ui/unsorted-match-stable.stderr
error: E::Bbb should sort before E::Ccc
  --> tests/ui/unsorted-match-stable.rs:18:9
   |
18 |         E::Bbb(_, _) => {}
   |         ^^^^^^
